--- a/course_work/ui_files/crypto_UI.ui
+++ b/course_work/ui_files/crypto_UI.ui
@@ -108,7 +108,7 @@
           <string notr="true">border: 1px  solid rgb(255, 0, 0);</string>
          </property>
          <property name="text">
-          <string>Шифрование</string>
+          <string>Зашифрование</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -135,7 +135,7 @@
        <string>сменить режим</string>
       </property>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>120</x>
@@ -189,7 +189,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>10</x>
