--- a/course_work/ui_files/crypto_UI.ui
+++ b/course_work/ui_files/crypto_UI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>552</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <x>6</x>
       <y>0</y>
       <width>790</width>
-      <height>551</height>
+      <height>461</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -30,27 +30,6 @@
      <attribute name="title">
       <string>File Mode</string>
      </attribute>
-     <widget class="QCheckBox" name="checkBox_auto_fill">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>210</y>
-        <width>311</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>11</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Автозаполнение пути сохранения файла</string>
-      </property>
-      <property name="checked">
-       <bool>true</bool>
-      </property>
-     </widget>
      <widget class="QPushButton" name="pushButton_execute_file_mode">
       <property name="geometry">
        <rect>
@@ -74,7 +53,7 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>131</width>
+        <width>151</width>
         <height>51</height>
        </rect>
       </property>
@@ -90,7 +69,7 @@
           <string notr="true">border: 1px  solid rgb(255, 0, 0);</string>
          </property>
          <property name="text">
-          <string>Текущий режим:</string>
+          <string>Текущая операция:</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -120,9 +99,9 @@
      <widget class="QPushButton" name="pushButton_change_file_mode">
       <property name="geometry">
        <rect>
-        <x>160</x>
+        <x>170</x>
         <y>10</y>
-        <width>121</width>
+        <width>151</width>
         <height>31</height>
        </rect>
       </property>
@@ -132,7 +111,7 @@
        </font>
       </property>
       <property name="text">
-       <string>сменить режим</string>
+       <string>сменить операцию</string>
       </property>
      </widget>
      <widget class="QWidget" name="layoutWidget">
@@ -237,6 +216,57 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="layoutWidget_3">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>10</y>
+        <width>151</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_8">
+       <item>
+        <widget class="QLabel" name="label_mode_encryption_fm">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">border: 1px  solid rgb(255, 0, 0);</string>
+         </property>
+         <property name="text">
+          <string>Режим шифрования</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <widget class="QRadioButton" name="radioButton_cbc_fm">
+           <property name="text">
+            <string>CBC</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="radioButton_ecb_fm">
+           <property name="text">
+            <string>ECB</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_text">
      <attribute name="title">
@@ -258,9 +288,9 @@
      <widget class="QPushButton" name="pushButton_change_text_mode">
       <property name="geometry">
        <rect>
-        <x>160</x>
+        <x>170</x>
         <y>10</y>
-        <width>121</width>
+        <width>151</width>
         <height>31</height>
        </rect>
       </property>
@@ -270,7 +300,7 @@
        </font>
       </property>
       <property name="text">
-       <string>сменить режим</string>
+       <string>сменить операцию</string>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_execute_text_mode">
@@ -388,7 +418,7 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>131</width>
+        <width>151</width>
         <height>51</height>
        </rect>
       </property>
@@ -404,7 +434,7 @@
           <string notr="true">border: 1px  solid rgb(255, 0, 0);</string>
          </property>
          <property name="text">
-          <string>Текущий режим:</string>
+          <string>Текущая операция:</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -431,7 +461,94 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>10</y>
+        <width>151</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_7">
+       <item>
+        <widget class="QLabel" name="label_mode_encryption_tm">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">border: 1px  solid rgb(255, 0, 0);</string>
+         </property>
+         <property name="text">
+          <string>Режим шифрования</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QRadioButton" name="radioButton_cbc_tm">
+           <property name="text">
+            <string>CBC</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="radioButton_ecb_tm">
+           <property name="text">
+            <string>ECB</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
     </widget>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_user_key">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>470</y>
+      <width>701</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_user_key">
+    <property name="geometry">
+     <rect>
+      <x>8</x>
+      <y>470</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Ключ:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
